# python-module-length

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
src/python_module_length/: __init__.py  module_length.py
